added post model and displayed registered users on users index page

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -22,3 +22,17 @@
 	color:white;
 	font-size:20px;
 }
+
+#user_list h3 {
+	color:white;
+	font-size:18px;
+	margin-bottom:20px;
+}
+
+#user_list {
+	width:900px;
+	height:400px;
+	border:1px solid black;
+	margin:0 auto;
+	margin-top:40px;
+}
