--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -15,12 +15,24 @@
 	margin:0 auto;
 	padding-top:10px;
 	// border:1px solid white;
+	margin-bottom:40px;
 }
 
-#user_index_main h2 {
+#top_nav_title p {
+	color:white;
+	width:900px;
+	margin:0 auto;
+}
+
+#project_pitch_holder h2 {
 	margin-top:20px;
 	color:white;
-	font-size:20px;
+	font-size:30px;
+}
+
+#project_pitch_holder img {
+	width:30px;
+	margin-right:10px;
 }
 
 #user_list h3 {
@@ -31,7 +43,7 @@
 
 #user_list {
 	width:900px;
-	height:380px;
+	height:320px;
 	border:1px solid black;
 	margin:0 auto;
 	margin-top:40px;
@@ -41,6 +53,6 @@
 	width:900px;
 	height:200px;
 	margin: 0 auto;
-	border:1px solid black;
+	border-top:2px solid white;
 	margin-top:50px;
 }
